hphp/hack/test/typecheck/global_const9.php
<?hh

const X = $x[9];
